<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">线程下载Pro</string>
    <string name="app_subtitle">多线程直链加速器</string>
    <string name="hint_url">粘贴文件直链URL</string>
    <string name="label_url_section">文件直链</string>
    <string name="label_settings_section">下载设置</string>
    <string name="label_progress_section">下载进度</string>
    <string name="label_history_section">历史记录</string>
    <string name="btn_paste">粘贴</string>
    <string name="btn_start">开始下载</string>
    <string name="btn_pause">暂停</string>
    <string name="btn_resume">继续</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_open">打开</string>
    <string name="btn_share">分享</string>
    <string name="btn_clear_history">清空历史</string>
    <string name="thread_64">64线程</string>
    <string name="thread_128">128线程</string>
    <string name="thread_256">256线程</string>
    <string name="thread_64_desc">4GB内存 · 骁龙7系 · &lt;500MB</string>
    <string name="thread_128_desc">6GB内存 · 骁龙865 · 500MB-2GB</string>
    <string name="thread_256_desc">8GB内存 · 骁龙8 Gen · &gt;2GB</string>
    <string name="thread_recommend">推荐</string>
    <string name="status_idle">等待下载</string>
    <string name="status_connecting">正在连接服务器…</string>
    <string name="status_downloading">下载中</string>
    <string name="status_paused">已暂停</string>
    <string name="status_completed">下载完成</string>
    <string name="status_failed">下载失败</string>
    <string name="status_cancelled">已取消</string>
    <string name="status_no_range">服务器不支持多线程，已降级为单线程</string>
    <string name="error_empty_url">请输入下载链接</string>
    <string name="error_invalid_url">链接格式不正确</string>
    <string name="error_network">网络连接失败</string>
    <string name="error_server">服务器响应错误</string>
    <string name="error_file">文件写入失败</string>
    <string name="speed_format">%1$s/s</string>
    <string name="progress_format">%1$d%%</string>
    <string name="size_format">%1$s / %2$s</string>
    <string name="time_remaining">剩余时间：%1$s</string>
    <string name="active_threads">活跃线程：%1$d/%2$d</string>
    <string name="notification_channel">下载服务</string>
    <string name="notification_downloading">正在下载…</string>
    <string name="history_completed">完成</string>
    <string name="history_cancelled">已取消</string>
    <string name="history_failed">失败</string>
    <string name="permission_required">需要存储权限才能下载文件</string>
</resources>
